Fixed the text overflowing through columns in tablet width.

--- a/css/float-grid.css
+++ b/css/float-grid.css
@@ -51,9 +51,25 @@
   width: 100%;
 }
 
+/* Tablet */
+
+@media only screen and (min-width: 640px) {
+  .col-3 {
+    width: 50%;
+  }
+
+}
+
+@media only screen and (min-width: 800px) {
+  .col-3 {
+    width: 33.33%;
+  }
+
+}
+
 
 /* Non-mobile, grid */
-@media only screen and (min-width: 640px) {
+@media only screen and (min-width: 1100px) {
   /* 3 columns, 3/12 in % */
   .col-3 {
     width: 25%;
